kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:

    metadata:
      labels:
        app: nginx

    spec:

      containers:

      - name: nginx

        image: nginx:stable-alpine

        ports:

        - containerPort: 80
